# fediproto-sync

./: .dockerignore  .git-branches.toml  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.artifacts  Makefile.toml  README.md  diesel.postgres.toml  diesel.sqlite.toml  diesel.toml  renovate.json  taplo.toml
atprotolib-rs/: Cargo.toml
atprotolib-rs/src/: api_calls.rs  lib.rs
atprotolib-rs/src/types/: mod.rs
atprotolib-rs/src/types/app_bsky/: mod.rs
atprotolib-rs/src/types/app_bsky/actor/: api_calls.rs  api_responses.rs  defs.rs  get_profiles.rs  get_suggestions.rs  mod.rs  search_actors.rs  search_actors_typeahead.rs
atprotolib-rs/src/types/app_bsky/embed/: defs.rs  external.rs  image.rs  images.rs  mod.rs  record.rs  record_with_media.rs  video.rs
atprotolib-rs/src/types/app_bsky/feed/: api_calls.rs  api_responses.rs  defs.rs  describe_feed_generator.rs  get_actor_feeds.rs  get_actor_likes.rs  get_author_feed.rs  get_feed.rs  get_feed_generator.rs  get_feed_generators.rs  get_feed_skeleton.rs  get_likes.rs  get_list_feed.rs  get_post_thread.rs  get_posts.rs  get_quotes.rs  get_reposted_by.rs  get_suggested_feeds.rs  get_timeline.rs  mod.rs  post.rs  postgate.rs  search_posts.rs  send_interactions.rs  threadgate.rs
atprotolib-rs/src/types/app_bsky/graph/: api_calls.rs  api_requests.rs  api_responses.rs  defs.rs  get_actor_starter_packs.rs  get_blocks.rs  get_followers.rs  get_follows.rs  get_known_followers.rs  get_list.rs  get_list_blocks.rs  get_list_mutes.rs  get_lists.rs  get_mutes.rs  get_relationships.rs  get_starter_pack.rs  get_starter_packs.rs  get_suggested_follows_by_actor.rs  mod.rs  mute_actor.rs  mute_actor_list.rs  mute_thread.rs  search_starter_packs.rs  starterpack.rs  unmute_actor.rs  unmute_actor_list.rs  unmute_thread.rs
atprotolib-rs/src/types/app_bsky/labeler/: api_responses.rs  defs.rs  get_services.rs  mod.rs
atprotolib-rs/src/types/app_bsky/notification/: api_requests.rs  api_responses.rs  get_unread_count.rs  list_notifications.rs  mod.rs  put_preferences.rs  register_push.rs  update_seen.rs
atprotolib-rs/src/types/app_bsky/richtext/: facet.rs  mod.rs
atprotolib-rs/src/types/app_bsky/video/: api_calls.rs  api_responses.rs  defs.rs  get_job_status.rs  get_upload_limits.rs  mod.rs  upload_video.rs
atprotolib-rs/src/types/com_atproto/: mod.rs
atprotolib-rs/src/types/com_atproto/admin/: api_calls.rs  api_requests.rs  api_responses.rs  defs.rs  delete_account.rs  disable_account_invites.rs  disable_invite_codes.rs  enable_account_invites.rs  get_account_info.rs  get_account_infos.rs  get_invite_codes.rs  get_subject_status.rs  mod.rs  search_accounts.rs  send_email.rs  update_account_email.rs  update_account_handle.rs  update_account_password.rs  update_subject_status.rs
atprotolib-rs/src/types/com_atproto/identity/: api_calls.rs  api_requests.rs  api_responses.rs  get_recommended_did_credentials.rs  mod.rs  resolve_handle.rs  sign_plc_operation.rs  submit_plc_operation.rs  update_handle.rs
atprotolib-rs/src/types/com_atproto/label/: api_responses.rs  defs.rs  mod.rs  query_labels.rs  subscribe_labels.rs
atprotolib-rs/src/types/com_atproto/moderation/: api_calls.rs  api_requests.rs  api_responses.rs  create_report.rs
atprotolib-rs/src/types/com_atproto/repo/: api_calls.rs  api_requests.rs  api_responses.rs  apply_writes.rs  create_record.rs  defs.rs  delete_record.rs  describe_repo.rs  get_record.rs  list_missing_blobs.rs  list_records.rs  mod.rs  put_record.rs  upload_blob.rs
atprotolib-rs/src/types/com_atproto/server/: api_calls.rs  api_requests.rs  api_responses.rs  check_account_status.rs  confirm_email.rs  create_account.rs  create_app_password.rs  create_invite_code.rs  create_invite_codes.rs  create_session.rs  (+16 more)
fediproto-sync/: Cargo.toml  build.rs
fediproto-sync-auth-ui/: Cargo.toml
fediproto-sync-auth-ui/src/: error.rs  lib.rs
fediproto-sync-auth-ui/src/auth/: mastodon.rs  mod.rs
fediproto-sync-auth-ui/src/web/: mastodon_auth.rs  mod.rs  root.rs
fediproto-sync-build-macros/: Cargo.toml
fediproto-sync-build-macros/src/: lib.rs
fediproto-sync-db/: Cargo.toml  build.rs
fediproto-sync-db/migrations/postgres/2024-12-09-173219_rename_synced_posts/: down.sql  up.sql
fediproto-sync-db/migrations/postgres/2024-12-09-232023_add_cached_service_tokens/: down.sql  up.sql
fediproto-sync-db/migrations/postgres/2024-12-19-171140_add_mastodon_post_retry_queue/: down.sql  up.sql
fediproto-sync-db/migrations/postgres/2025-01-07-195610_add_is_boosted_post/: down.sql  up.sql
fediproto-sync-db/migrations/sqlite/2024-12-09-173219_rename_synced_posts/: up.sql
fediproto-sync-db/migrations/sqlite/2024-12-09-232023_add_cached_service_tokens/: down.sql  up.sql
fediproto-sync-db/migrations/sqlite/2024-12-19-170459_add_mastodon_post_retry_queue/: down.sql  up.sql
fediproto-sync-db/migrations/sqlite/2025-01-07-195610_add_is_boosted_post/: down.sql  up.sql
fediproto-sync-db/src/: core.rs  error.rs  lib.rs  models.rs  operations.rs  schema.rs  schema_postgres.rs  schema_sqlite.rs  type_impls.rs
fediproto-sync-lib/: Cargo.toml
fediproto-sync-lib/src/: config.rs  crypto.rs  error.rs  lib.rs  utils.rs
fediproto-sync-lib/src/tests/: crypto.rs  mod.rs  utils.rs
fediproto-sync/migrations/2024-11-30-233159_initial/: down.sql  up.sql
fediproto-sync/migrations/2024-12-06-150113_add_cached_files/: down.sql  up.sql
fediproto-sync/migrations/2024-12-07-045254_initial/: down.sql  up.sql
fediproto-sync/migrations/2024-12-07-190217_initial/: down.sql  up.sql
fediproto-sync/migrations/sqlite/2024-12-09-014456_initial/: down.sql  up.sql
fediproto-sync/migrations/sqlite/2024-12-09-173219_rename_synced_posts/: down.sql
fediproto-sync/src/: auth.rs  bsky.rs  bsky_post_sync.rs  cli.rs  config.rs  core.rs  crypto.rs  db.rs  error.rs  img_utils.rs  lib.rs  main.rs  mastodon.rs  schema.rs  schema_postgres.rs  schema_sqlite.rs
fediproto-sync/src/bsky/: media.rs  mod.rs  rich_text.rs  utils.rs
fediproto-sync/src/db/: core.rs  mod.rs  models.rs  operations.rs  trait_impls.rs
fediproto-sync/src/models/: mod.rs
(+32 files in other folders)
