[workspace]
members = [
    "fediproto-sync",
    "fediproto-sync-auth-ui",
    "fediproto-sync-db",
    "fediproto-sync-lib"
]
resolver = "2"

package.authors = [
    "Tim Small"
]
package.homepage = "https://github.com/Smalls1652/fediproto-sync"
package.repository = "https://github.com/Smalls1652/fediproto-sync"
package.license-file = "LICENSE"

[profile.release]
opt-level = "s"
lto = true
