[workspace]
members = [
    "fediproto-sync",
    "fediproto-sync-auth-ui",
    "fediproto-sync-build-macros",
    "fediproto-sync-db",
    "fediproto-sync-lib",
]
resolver = "2"

package.authors = ["Tim Small"]
package.homepage = "https://github.com/Smalls1652/fediproto-sync"
package.repository = "https://github.com/Smalls1652/fediproto-sync"
package.license = "MIT"
package.license-file = "LICENSE"
package.edition = "2024"

[profile.release]
opt-level = "s"
lto = true

[workspace.dependencies]
anyhow = "1.0.98"
async-session = "3.0.0"
atrium-api = "0.25.2"
atrium-xrpc-client = "0.5.13"
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.9", features = [
    "32-column-tables",
    "chrono",
    "postgres",
    "postgres_backend",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
    "serde_json",
    "sqlite",
    "uuid",
], default-features = false }
diesel_migrations = { version = "2.2.0", features = ["postgres", "sqlite"] }
dom_query = "0.13.1"
dotenvy = "0.15.7"
git-version = "0.3.9"
image = "0.25.6"
ipld-core = "0.4.2"
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
megalodon = "1.0.0"
oauth2 = "4.4.2"
once_cell = "1.21.3"
openssl = { version = "0.10.72" }
#pq-sys = { version = "0.7.1", features = ["bundled"] }
rand = "0.9.1"
regex = { version = "1.11.1", features = ["std"] }
reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls",
], default-features = false }
rstest = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snmalloc-rs = { version = "0.3.8" }
thiserror = "2.0.12"
tikv-jemallocator = { version = "0.6.0" }
tokio = { version = "1.44.2", features = ["full"] }
toml_edit = "0.22.25"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["fast-rng", "v4", "v7"] }
