[package]
name = "fediproto-sync-auth-ui"
version = "0.1.0"
edition = "2021"
description = "Authentication web server for fediproto-sync."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

build = "build.rs"

[dependencies]
anyhow = "1.0.95"
async-session = "3.0.0"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
diesel = { version = "2.2.6", features = [
    "chrono",
    "postgres",
    "postgres_backend",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
    "serde_json",
    "sqlite",
    "uuid",
] }
fediproto-sync-db = { path = "../fediproto-sync-db" }
fediproto-sync-lib = { path = "../fediproto-sync-lib" }
oauth2 = "4.4.2"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"

[build-dependencies]
fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }
