[package]
name = "fediproto-sync-auth-ui"
version = "0.1.0"
description = "Authentication web server for fediproto-sync."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

build = "build.rs"

[dependencies]
anyhow = { workspace = true }
async-session = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
diesel = { workspace = true }
fediproto-sync-db = { path = "../fediproto-sync-db" }
fediproto-sync-lib = { path = "../fediproto-sync-lib" }
oauth2 = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }

[package.metadata.cargo-machete]
ignored = ["fediproto-sync-build-macros"]
