[package]
name = "fediproto-sync-build-macros"
version = "0.1.0"
edition = "2021"
description = "Shared build script functions for fediproto-sync packages."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
git-version = "0.3.9"
toml_edit = "0.22.22"
