[package]
name = "fediproto-sync-build-macros"
version = "0.1.0"
description = "Shared build script functions for fediproto-sync packages."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
git-version = "0.3.9"
toml_edit = "0.22.24"
