[package]
name = "fediproto-sync-db"
version = "0.1.0"
edition = "2021"
description = "Library for fediproto-sync database operations and models."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

build = "build.rs"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = [
    "chrono",
    "postgres",
    "postgres_backend",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
    "serde_json",
    "sqlite",
    "uuid",
] }
diesel_migrations = { version = "2.2.0", features = ["postgres", "sqlite"] }
fediproto-sync-lib = { path = "../fediproto-sync-lib" }
megalodon = "0.15.0"
openssl = "0.10.68"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["io-std", "io-util"] }
tracing = "0.1.41"
uuid = { version = "1.11.0", features = ["fast-rng", "v4", "v7"] }

[features]
local_dev = []

[build-dependencies]
fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }
