[package]
name = "fediproto-sync-db"
version = "0.1.0"
description = "Library for fediproto-sync database operations and models."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

build = "build.rs"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = [
    "chrono",
    "postgres",
    "postgres_backend",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
    "serde_json",
    "sqlite",
    "uuid",
] }
diesel_migrations = { version = "2.2.0", features = ["postgres", "sqlite"] }
fediproto-sync-lib = { path = "../fediproto-sync-lib" }
megalodon = "0.15.0"
thiserror = "2.0.10"
tokio = { version = "1.42.0", features = ["io-std", "io-util"] }
tracing = "0.1.41"
uuid = { version = "1.11.1", features = ["fast-rng", "v4", "v7"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.68" }

[target.'cfg(target_os = "macos")'.dependencies]
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
pq-sys = { version = "0.6.3", features = ["bundled"] }
openssl = { version = "0.10.68", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
pq-sys = { version = "0.6.3", features = ["bundled"] }
openssl = { version = "0.10.68", features = ["vendored"] }

[features]
local_dev = []

[build-dependencies]
fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }

[package.metadata.cargo-machete]
ignored = ["fediproto-sync-build-macros", "libsqlite3-sys", "pq-sys"]
