[package]
name = "fediproto-sync-db"
version = "0.1.0"
description = "Library for fediproto-sync database operations and models."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

build = "build.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
fediproto-sync-lib = { path = "../fediproto-sync-lib" }
megalodon = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libsqlite3-sys = { workspace = true }
pq-sys = { workspace = true }
openssl = { workspace = true, features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
libsqlite3-sys = { workspace = true }
pq-sys = { workspace = true }
openssl = { workspace = true, features = ["vendored"] }

[features]
local_dev = []

[build-dependencies]
fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }

[package.metadata.cargo-machete]
ignored = ["fediproto-sync-build-macros", "libsqlite3-sys", "pq-sys"]
