[package]
name = "fediproto-sync-lib"
version = "0.1.0"
description = "Shared library for fediproto-sync."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
thiserror = "2.0.10"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.69" }

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }

[build-dependencies]
fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }

[package.metadata.cargo-machete]
ignored = ["fediproto-sync-build-macros"]
