[package]
name = "fediproto-sync-lib"
version = "0.1.0"
description = "Shared library for fediproto-sync."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
rand = "0.9.0"
thiserror = "2.0.10"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.71" }

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10.70", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
openssl = { version = "0.10.70", features = ["vendored"] }

[build-dependencies]
fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }

[dev-dependencies]
rstest = "0.24.0"

[package.metadata.cargo-machete]
ignored = ["fediproto-sync-build-macros"]
