[package]
name = "fediproto-sync-lib"
version = "0.1.0"
description = "Shared library for fediproto-sync."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
rand = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }

[build-dependencies]
fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }

[dev-dependencies]
rstest = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["fediproto-sync-build-macros"]
