[package]
name = "fediproto-sync"
version = "0.1.0"
description = "A daemon for syncing Mastodon posts to BlueSky automatically."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

build = "build.rs"

[dependencies]
anyhow = "1.0.95"
atrium-api = "0.24.10"
atrium-xrpc-client = "0.5.10"
bytes = "1.10.0"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = [
    "chrono",
    "postgres",
    "postgres_backend",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
    "serde_json",
    "sqlite",
    "uuid",
] }
dom_query = "0.13.1"
dotenvy = "0.15.7"
fediproto-sync-auth-ui = { path = "../fediproto-sync-auth-ui" }
fediproto-sync-db = { path = "../fediproto-sync-db" }
fediproto-sync-lib = { path = "../fediproto-sync-lib" }
image = "0.25.5"
ipld-core = "0.4.1"
megalodon = "1.0.0"
once_cell = "1.20.2"
regex = { version = "1.11.1", features = ["std"] }
reqwest = { version = "0.12.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
tikv-jemallocator = { version = "0.6.0" }

[build-dependencies]
fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }

[package.metadata.cargo-machete]
ignored = ["fediproto-sync-build-macros"]
