[package]
name = "fediproto-sync"
version = "0.1.0"
description = "A daemon for syncing Mastodon posts to BlueSky automatically."
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

build = "build.rs"

[dependencies]
anyhow = { workspace = true }
atrium-api = { workspace = true }
atrium-xrpc-client = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
dom_query = { workspace = true }
dotenvy = { workspace = true }
fediproto-sync-auth-ui = { path = "../fediproto-sync-auth-ui" }
fediproto-sync-db = { path = "../fediproto-sync-db" }
fediproto-sync-lib = { path = "../fediproto-sync-lib" }
image = { workspace = true }
ipld-core = { workspace = true }
megalodon = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
tikv-jemallocator = { workspace = true }

[target.'cfg(all(target_family = "unix", target_os = "macos"))'.dependencies]
snmalloc-rs = { workspace = true }

[build-dependencies]
fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }

[package.metadata.cargo-machete]
ignored = ["fediproto-sync-build-macros"]
